--- a/重构：改善既有代码的设计(2010年版)/01/01_重构，第一个案例.md
+++ b/重构：改善既有代码的设计(2010年版)/01/01_重构，第一个案例.md
@@ -1,2 +1,4 @@
-# reading_notes
-我的读书笔记
+# 第1章 重构，第一个案例
+
+> 本章感悟：
+某些有经验有天赋的程序员，尽管他们没读过本书，也不太了解22种Code Smell，但是他们根据自己的本能和直觉，也能发现有问题的代码。这样的人才如果能接受系统的重构training，前途将无可限量。
