--- a/重构：改善既有代码的设计(2010年版)/01/01_重构，第一个案例.md
+++ b/重构：改善既有代码的设计(2010年版)/01/01_重构，第一个案例.md
@@ -1,4 +1,8 @@
 # 第1章 重构，第一个案例
 
-> 本章感悟：
-某些有经验有天赋的程序员，尽管他们没读过本书，也不太了解22种Code Smell，但是他们根据自己的本能和直觉，也能发现有问题的代码。这样的人才如果能接受系统的重构training，前途将无可限量。
+> 本章感悟：<br/>
+某些有天赋有经验的程序员，尽管他们没读过本书，也不太了解22种代码的坏味道，但是他们根据自己的本能和直觉，也能发现有问题的代码，甚至fix之。这样的人才如果能接受系统的重构training，前途将无可限量。
+
+在进行类的设计的时候，有一种不成文，但很常见的做法，就是从需求文档（需求描述）中找出相关的名词作为所谓的“对象”，然后面向这些“对象”，进行类的设计和开发。
+
+第一个例子的代码，很像是这种思维方式下的产物。
